css/styles.css
@import url("//fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,700");
@import url("//fonts.googleapis.com/css?family=Playfair+Display:400,400italic|Radley");

.contact-icon { width: 60px; }
.ward-map-container, .ward-map { width: 100%; height: 350px; }
/*#nprogress .bar, #nprogress .spinner { margin-top: 45px; }*/
dl {
    font-family: 'Playfair Display';
    font-size: 18;
    font-weight: 400;
}
dt {
    font-family: Montserrat;
    font-size: 4!important;
    text-transform: uppercase;
    font-weight: 400;
}
.ward-ordinal {
    font-family: Montserrat;
    font-size: 5!important;
    color: #2284a1;
    text-transform: uppercase;
    font-weight: 400;
    font-size: 75%;
}
/*thumbnail {
    padding: 10px 0px 10px;
}*/
.top-bar { z-index: 1; }
.top-bar, .top-bar-section ul, .top-bar-section li a:not(.button) { background-color: #2284a1 !important; }

/* Top bar active/hover */
.top-bar-section ul li.active > a,
.top-bar-section li:hover a,
.top-bar-section ul li:hover > a,
.top-bar-section ul.dropdown li a:hover:not(.button),
.top-bar.expanded .title-area,
.top-bar-section ul.dropdown {
     background-color: #2ba6cb;
}

.icon-bar { background-color: #04576F; }

/* Decrease button group padding on mobile */
@media only screen and (max-width: 40em) {
     .button-group li a {
          padding: 15px;
          margin: 0;
          font-size: 80%;
     }
}

/* Override top bar widths to support mobile */
.top-bar .name h1 a { width: auto; }

/* Map full height */
#main, .city-map {
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
}
#main { top: 45px; }
.top-bar { z-index: 1; }

/* Leaflet popup */
.leaflet-popup-content {
     text-align: center;
}
.leaflet-popup-content header {
     font-weight: bold;
     font-size: 120%;
}
.leaflet-popup-content .button {
     color: #fff;
     margin-top: 5px;
     margin-bottom: 0;
}

/* Leaflet address search */
.leaflet-container .leaflet-control-geosearch input {
     background-color: rgba(255, 255, 255, 0.90);
}

/* Error links */
.unknown { 
     font-size: 80%;
     color: #bababa;
     text-transform: uppercase;
}
.error-link { font-size: 80%; }
.error-link-bottom {
     font-size: 80%;
     text-align: center;
     color: #a0a0a0;
}

/* entire container, keeps perspective */
.flip-container {
	perspective: 1000;
}
	/* flip the pane when hovered */
	.flip-container:hover .flipper, .flip-container.hover .flipper {
		transform: rotateY(180deg);
	}

.flip-container, .front, .back {
	/*width: 320px;
	height: 480px;*/
}

/* flip speed goes here */
.flipper {
	transition: 0.6s;
	transform-style: preserve-3d;

	position: relative;
}

/* hide back of pane during swap */
.front, .back {
	backface-visibility: hidden;

	position: absolute;
	top: 0;
	left: 0;
}

/* front pane, placed above back */
.front {
	z-index: 2;
	/* for firefox 31 */
	transform: rotateY(0deg);
}

/* back, initially hidden pane */
.back {
	transform: rotateY(180deg);
}

.flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
	transform: rotateY(180deg);
}

/* Rounded avatars */
.card {
     width: 75%;
     height: 300px;
     float: left;
     margin-top: 1em;
     margin-right: 1em;
     position: relative;
     overflow: hidden;
     border: 5px #2284a1 solid;
     background-size: cover;
     background-position: 50%;
     
     -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
}
/* Photo border */
.card .border {
     width: 100%;
     height: 100%;
     border: 1px black solid;
     z-index: 20;
}
.card:before, .card:after {
     content: '';
}
/* Top-left corner */
.card:before {
     position: absolute;
     top: 0;
     left: 0;
     z-index: 8;
     border-top: 45px solid #2284a1;
     border-right: 45px solid transparent;
}
/* Top-left corner inside border */
.card:after {
     position: absolute;
     top: 0;
     left: 0;
     z-index: 5;
     border-top: 46px solid black;
     border-right: 46px solid transparent;
}
/* Photo */
/*.card img {
     min-width: 100%;
     max-width: none;
     height: 100%;
     border: 1px black solid;
}*/
/* Name */
.card .name {
     position: absolute;
     bottom: 0;
     right: 0;
     background-color: #2284a1;
     border-left: 1px black solid;
     border-top: 1px black solid;
     padding-left: 6px;
}
.card .name a {
     color: #fff;
}
.card .name:before, .card .name:after {
     content: '';
}
/* Bottom-right corner */
.card .name:before {
     position: absolute;
     bottom: 25px;
     right: -2px;
     z-index: 18;
     border-bottom: 15px solid #2284a1;
     border-left: 15px solid transparent;
}
/* Bottom-right corner inside border */
.card .name:after {
     position: absolute;
     bottom: 25px;
     right: -2px;
     z-index: 15;
     border-bottom: 17px solid black;
     border-left: 17px solid transparent;
}
/* Logo/Ward */
.card .logo {
     text-align: center;
     position: absolute;
     z-index: 15;
     top: 3px;
     left: 3px;
     border: 1px black solid;
     background-color: #fff;
     padding: 5px;
     padding-top: 7px;
     
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
     
     /*-webkit-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
     -moz-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
     box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);*/
}
.card .logo .ward-number {
     font-weight: bold;
     color: #2284a1;
     display: block;
     line-height: 0.2;
     padding-top: 7px;
}
.card .logo .ward-text {
     color: #2284a1;
     font-size: 80%;
}
/* Stats */
.stats {
     /*top: 1px;
     bottom: 1px;*/
     left: 1px;
     right: 1px;
     background: #CDD8DB;
     z-index: 19;
     padding: 10px;
     height: 300px;
     border: 5px #2284a1 solid;
     
     -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
}
.stats h3 {
     font-size: 120%;
}
.stats h3 .ward-ordinal {
     display: block;
}
.stats dt, .card .stats dd {
     margin-bottom: 0;
     float: left;
}
.stats dt { width: 60%; }
.stats .button { margin-top: 15px; }

